# internal_CMDB

./: .coverage 2  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .yamllint  Dockerfile.api  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.frontend.dev.dockerignore  Dockerfile.frontend.dockerignore  Dockerfile.worker  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  ource .env  probleme&rezolvari.md  pyproject.toml  sonar-project.properties  stack.sh
.github/workflows/: cd.yml  ci.yml  pre-commit.yml  sbom.yml
.semgrep/: business-logic.yml  rules.yml  semgrep-lsp-wrapper.sh  typescript.yml
.stack/pids/: agent.pid  api.pid  worker.pid
deploy/agent/: agent.toml.example  internalcmdb-agent.service
deploy/haproxy/: wapp-pro-app.cfg
deploy/llm-gateway/: docker-compose.yml
deploy/observability/: blackbox.yml  docker-compose.blackbox.yml  docker-compose.exporters.yml
deploy/openbao/: bao-agent-internalcmdb.hcl  bao-agent-llm-gateway.hcl  bao-agent-traefik.hcl  openbao-agent-llm-gateway.service  setup-internalcmdb.sh  setup-openrouter.sh
deploy/orchestrator/: Dockerfile.postgres  README.md  cmdb-api.yml  docker-compose.internalcmdb.prod.yml  docker-compose.internalcmdb.yml  docker-compose.postgresql.yml  evolution-wapp.yml  internalcmdb.prod.yml  internalcmdb.yml  llm-api.yml  redis.yml
deploy/spire/: agent.conf  docker-compose.spire.yml  server.conf
deploy/wapp-pro-app/: docker-compose.yml
docs/: COVERAGE_BASELINE.md  blueprint_platforma_interna.md  ownership-matrix.md  plan-platformaInternaEnterpriseImplementation.md  plan-platformaInternaEnterpriseImplementation.prompt.md  plan_implementare _selfhosted_llm.md  policy-rto-rpo.md  policy-secrets-and-credentials.md  wapp_pro_app.md
docs/adr/: ADR-001-truth-model.md  ADR-002-system-of-record.md  ADR-003-retrieval-ordering.md  ADR-004-write-approval-model.md  ADR-005-rollout-discipline.md
docs/architecture/: F5-zero-trust-spiffe.md
docs/capacity/: CAP-001-capacity-growth-cost-models.md  CAP-002-load-stress-test-results.md  CAP-003-failure-injection-resilience-review.md  CAP-004-load-test-v2-regression.md
docs/continuity/: CONT-001-rto-rpo-ha-posture.md  CONT-002-backup-restore-procedures.md  CONT-003-dr-simulation-report.md
docs/governance/: DATA-001-data-classification-matrix.md  DATA-002-retention-deletion-runbooks.md  DATA-003-exception-register-escalation.md  DATA-004-quarterly-access-review-compliance-declaration.md  DATA-005-privileged-access-review-cycle2.md  document-taxonomy.md  metadata-schema.md  operating-rules.md  policy-matrix.md
docs/llm/: LLM-001-model-serving-registry-routing.md  LLM-002-evaluation-harness-benchmark-suite.md  LLM-003-fallback-latency-safety-controls.md  LLM-004-model-eval-cycle2-regression.md  LLM-005-portable-model-registry.md  LLM-006-audit-infrastructura-selfhosted-llm.md  LLM-007-model-qwq-32b-awq.md  LLM-008-model-qwen25-14b-instruct-awq.md  LLM-009-model-qwen3-embedding-8b.md  LLM-010-llm-guard-api.md
docs/network/: LXC-VLAN-ROUTING.md
docs/observability/: OBS-001-kpi-slo-dashboard-alerting.md  OBS-002-retention-audit-runbooks.md  OBS-003-wave2-readiness-review.md  OBS-004-signal-inventory-ownership.md  OBS-005-instrumentation-export-contracts.md  OBS-006-canonical-health-queries.md  OBS-007-grafana-dashboard-pack.md  OBS-008-alert-routing-escalation.md  OBS-009-kpi-slo-error-budget-views.md  OBS-010-retention-enforcement-validation.md  OBS-011-runbook-linkage-index.md  OBS-012-gameday-drill-report.md  OBS-013-alert-response-drill-runbook-pack.md
docs/operations/: OPS-001-raci-service-ownership.md  OPS-002-support-tiers-oncall-incident-command.md  OPS-003-recurring-review-cadences.md  OPS-004-backup-restore-drill-cycle2.md  OPS-005-service-review-minutes-cycle2.md  OPS-006-change-log-baseline-sustained-operation-declaration.md  ROLLBACK-STRATEGY.md
docs/pilot/: PILOT-001-scope-and-artifact-pack.md  PILOT-002-execution-record.md  PILOT-003-repeatability-gap-register.md
docs/release/: REL-001-environment-classes-promotion-gates.md  REL-002-rollback-contracts-migration-drills.md  REL-003-release-evidence-chain.md
docs/retrieval/: task-type-catalog.md
docs/rollout/: agent-host-map.csv  baseline-20260705.txt  baseline-llm-pre-openrouter-20260705.txt  cerniq-llm-openrouter.md  llm-openrouter-status.md  monitoring-runbook.md  openrouter-key-rotation.md  rollout-status.md
docs/runbooks/: RB-COGNITIVE-001-llm-unresponsive.md  RB-COGNITIVE-002-hitl-queue-overflow.md  RB-COGNITIVE-003-eventbus-lag.md  RB-COGNITIVE-004-guard-blocking-legitimate.md  RB-COGNITIVE-005-cognitive-job-failure.md  RB-COGNITIVE-006-embedding-mismatch.md
docs/security/: SEC-001-secrets-storage-and-trust-boundaries.md  SEC-002-credential-rotation-privileged-access.md  SEC-003-certificate-lifecycle-tls-policy.md  SEC-004-sbom-dependency-inventory.md  SEC-005-dependency-scanning-integrity-gates.md  SEC-006-artifact-provenance-attestation-license.md
docs/templates/: README.md  adr-template.md  policy-pack-template.md  product-intent-template.md  research-dossier-template.md  runbook-template.md  service-dossier-template.md  verification-spec-template.md
frontend/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/: middleware.ts
scripts/: __init__.py  _apply_0014.py  _check_aiml.py  _check_orphans.py  _db_summary.py  _full_db_check.py  _verify_orphans.py  backup_cognitive.sh  bootstrap.sh  cleanup_stale_services.py  collect_baseline.sh  collect_llm_baseline.sh  cutover_llm_openrouter.sh  cutover_prod.sh  deploy_agent.sh  deploy_llm_gateway.sh  deploy_spire.sh  distribute_configs.sh  export_agent_host_map.py  fleet_rollout.sh  load_test.py  monitor_rollout.sh  rotate_bootstrap_token.sh  rotate_jwt.sh  semgrep_update_rules.sh  setup_firewall.sh  sync_hz118_lxc.py  sync_remaining_hosts.py  test_cluster_ssh.py  validate_docs.sh
src/proiecteit/: health.py
subprojects/: audit_result_store.py  test_audit_result_store.py
tests/: test_cli.py  test_health.py
(+674 files in other folders)
