[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "proiecteit"
version = "0.1.0"
description = "Enterprise-grade Python project baseline"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Alex Neacsu" }
]
license = { text = "Proprietary" }
dependencies = [
  "alembic>=1.14",
  "psycopg[binary]>=3.2",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.8.6",
  "build>=1.3.0",
  "mypy>=1.17.1",
  "pip-audit>=2.9.0",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.12.12",
  "types-PyYAML>=6.0",
  "types-setuptools>=80.9.0.20250822"
]

[tool.hatch.build.targets.wheel]
packages = ["src/proiecteit", "src/internalcmdb"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=src/proiecteit --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/proiecteit"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "PL", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true
mypy_path = "src"

# SQLAlchemy 2.x DeclarativeBase uses metaclass magic that mypy sees as [misc]
# without the plugin. The plugin causes ClassVar conflicts with __table_args__.
# Narrow override: suppress only [misc] in model files.
[[tool.mypy.overrides]]
module = "internalcmdb.models.*"
disable_error_code = ["misc"]

# pgvector is an optional runtime dependency with no bundled stubs.
[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
severity = "medium"
confidence = "medium"

[tool.pip-audit]
progress-spinner = "off"
strict = true

# ---------------------------------------------------------------------------
# Pylint — suppress known false positives and project-wide style conventions
# ---------------------------------------------------------------------------

[tool.pylint.main]
# Subprojects are standalone scripts whose local-module imports (audit_result_store)
# cannot be resolved from the project root.  Migration files follow alembic naming
# and length conventions that differ from the main package.
ignore-paths = [
    "subprojects/",
    "src/internalcmdb/migrations/",
]

[tool.pylint.TYPECHECK]
# Alembic wraps context and op in dynamic proxy objects whose members are not
# discoverable at import time; suppress the resulting false-positive E1101 errors.
generated-members = [
    "alembic.context.*",
    "alembic.op.*",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    # Docstring coverage is enforced at code-review level; blanket per-symbol
    # pylint checks produce only noise for SQLAlchemy model classes.
    "missing-class-docstring",     # C0115
    "missing-function-docstring",  # C0116
    "missing-module-docstring",    # C0114
    # Infrastructure loaders deliberately catch broad exceptions at the boundary
    # so that a failed individual record never aborts a batch load.
    "broad-exception-caught",      # W0718
]
