[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "proiecteit"
version = "0.1.0"
description = "Enterprise-grade Python project baseline"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Alex Neacsu" }
]
license = { text = "Proprietary" }
dependencies = [
  "alembic>=1.14",
  "arq>=0.26",
  "deepdiff>=7.0",
  "fastapi>=0.115",
  "httpx>=0.28",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.7",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "redis>=5.2",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.8.6",
  "build>=1.3.0",
  "mypy>=1.17.1",
  "pip-audit>=2.9.0",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.12.12",
  "types-PyYAML>=6.0",
  "types-setuptools>=80.9.0.20250822"
]

[tool.hatch.build.targets.wheel]
packages = ["src/proiecteit", "src/internalcmdb"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=src/proiecteit --cov=src/internalcmdb --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/proiecteit", "src/internalcmdb"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "PLR0913"]
# Utility scripts with inherently complex branching and many-argument entry-points
"subprojects/**/*.py" = ["PLR0911", "PLR0912", "PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true
mypy_path = "src"

# SQLAlchemy 2.x DeclarativeBase uses metaclass magic that mypy sees as [misc]
# without the plugin. The plugin causes ClassVar conflicts with __table_args__.
# Narrow override: suppress only [misc] in model files.
[[tool.mypy.overrides]]
module = "internalcmdb.models.*"
disable_error_code = ["misc"]

# pgvector is an optional runtime dependency with no bundled stubs.
[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

# FastAPI route decorators and pydantic-settings BaseSettings subclasses are
# untyped in the pre-commit mypy isolated environment (missing deps).
# Suppress [misc] and [unused-ignore] — they show 0 errors when run via the
# project venv with all dependencies installed.
[[tool.mypy.overrides]]
module = ["internalcmdb.api.*", "internalcmdb.workers.*"]
disable_error_code = ["misc", "unused-ignore"]

# pytest.fixture / pytest.mark.parametrize decorators are untyped in the
# pre-commit mypy isolated environment; same for type:ignore comments only
# needed with the full dep stack.
[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
disable_error_code = ["misc", "unused-ignore"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
severity = "medium"
confidence = "medium"

[tool.pip-audit]
progress-spinner = "off"
strict = true

# ---------------------------------------------------------------------------
# Pylint — suppress known false positives and project-wide style conventions
# ---------------------------------------------------------------------------

[tool.pylint.main]
# Subprojects are standalone scripts whose local-module imports (audit_result_store)
# cannot be resolved from the project root.  Migration files follow alembic naming
# and length conventions that differ from the main package.
ignore-paths = [
    "subprojects/",
    "src/internalcmdb/migrations/",
]
# Teach Pylint where the project packages live so test-file imports resolve.
source-roots = ["src", "tests"]

[tool.pylint.TYPECHECK]
# Alembic wraps context and op in dynamic proxy objects whose members are not
# discoverable at import time; suppress the resulting false-positive E1101 errors.
generated-members = [
    "alembic.context.*",
    "alembic.op.*",
    # unittest.mock attributes injected dynamically at runtime on any object;
    # never appear in production code so adding them here carries no false-negative risk.
    "return_value",
    "side_effect",
    "call_count",
    "call_args",
    "call_args_list",
    "assert_called_once",
    "assert_called_with",
    "assert_called_once_with",
    "assert_any_call",
    "assert_not_called",
    "reset_mock",
]
# unittest.mock.MagicMock injects attributes (return_value, call_count,
# side_effect, assert_called_once, …) dynamically at runtime; pylint cannot
# infer them statically and raises false-positive E1101 on every mock call-chain.
ignored-classes = ["MagicMock"]

[tool.pyright]
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportMissingTypeStubs = "none"
extraPaths = ["subprojects"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    # Docstring coverage is enforced at code-review level; blanket per-symbol
    # pylint checks produce only noise for SQLAlchemy model classes.
    "missing-class-docstring",     # C0115
    "missing-function-docstring",  # C0116
    "missing-module-docstring",    # C0114
    # Infrastructure loaders deliberately catch broad exceptions at the boundary
    # so that a failed individual record never aborts a batch load.
    "broad-exception-caught",      # W0718
    # SQLAlchemy mapped classes (models) carry their interface in column
    # definitions and relationships, not in public methods.  Single-method
    # pytest test classes are also intentionally minimal.
    "too-few-public-methods",      # R0903
]
